--- a/src/index.css
+++ b/src/index.css
@@ -152,13 +152,41 @@ a{
   width:160px;
   height:60px;
   margin:20px;
-
   /* does not work: */
   font-weight:900;
-
   /* does not work */
   outline:0;
+  border-radius: 10px;
+}
 
+.startBtn2{
+  background-image: linear-gradient(to bottom, green, lightgreen);
+  color:white;
+  font-size:24px;
+  width:160px;
+  height:60px;
+  margin:60px;
+  margin-top:100px;
+  /* does not work: */
+  font-weight:900;
+  /* does not work */
+  outline:0;
+  border-radius: 10px;
+}
+
+
+.backToStartBtn{
+  background-image: linear-gradient(to bottom, yellow, orange);
+  color:white;
+  font-size:24px;
+  width:160px;
+  height:60px;
+  margin:60px;
+  margin-top:100px;
+  /* does not work: */
+  font-weight:900;
+  /* does not work */
+  outline:0;
   border-radius: 10px;
 }
 
