--- a/src/index.css
+++ b/src/index.css
@@ -467,6 +467,28 @@ button:focus-visible {
         animation: slowFocus 5s linear;
       }
 
+      .card{
+        background-color: white;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-height:40px;
+        max-width:100%;
+        /* transform: rotateY(180deg);
+        animation: 2s hideCard linear; */
+      }
+
+      .container{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom:200px;
+        /* padding-bottom:100px; */
+        /* width: 100%;
+        height: 40vh; */
+      }
+
   }
 
 
