--- a/src/index.css
+++ b/src/index.css
@@ -475,6 +475,8 @@ button:focus-visible {
         align-items: center;
         max-height:40px;
         max-width:100%;
+        padding-left:5px;
+        padding-right:5px;
         /* transform: rotateY(180deg);
         animation: 2s hideCard linear; */
       }
@@ -484,8 +486,8 @@ button:focus-visible {
         align-items: center;
         justify-content: center;
         margin-bottom:200px;
-        padding-left:50px;
-        padding-right:50px;
+        margin-left:5px;
+        margin-right:5px;
         /* padding-bottom:100px; */
         /* width: 100%;
         height: 40vh; */
