--- a/src/index.css
+++ b/src/index.css
@@ -475,8 +475,8 @@ button:focus-visible {
         align-items: center;
         max-height:40px;
         max-width:100%;
-        padding-left:5px;
-        padding-right:5px;
+        /* padding-left:5px;
+        padding-right:5px; */
         /* transform: rotateY(180deg);
         animation: 2s hideCard linear; */
       }
@@ -486,6 +486,7 @@ button:focus-visible {
         align-items: center;
         justify-content: center;
         margin-bottom:200px;
+        max-width:100%;
         margin-left:5px;
         margin-right:5px;
         /* padding-bottom:100px; */
