--- a/src/index.css
+++ b/src/index.css
@@ -431,6 +431,60 @@ button:focus-visible {
 
 
 
+/* styling about section so the content would be in two columns and justified/centred  */
+.stylingAbout{
+  /* background-color: #000; */
+  display:inline-block;
+  max-width:400px;
+  float:left;  
+}
+.landingHeader2{
+  margin-top:50px;
+  color:white;
+  font-size:48px;
+  text-shadow:2px 2px black;
+  padding-right:140px;
+  margin-bottom:50px;
+}
+/* .headingAbout{
+  text-align: center;} */
+.stylingQuickAccess{
+  /* background-color: #000; */
+  display:inline-block;
+  max-width:300px;
+  clear:both;
+}
+.quickBtn{
+  margin-top:50px;}
+.MJEdescription2{
+  color:black;
+  margin-top:30px;
+  margin-bottom:30px;
+  /* max-width:120%; */
+  padding-right:100px;
+  text-align: center;
+  justify-content: center;
+  align-items:center ;
+  font-family: Calibri, sans-serif;
+}
+
+
+/* styling funfacts section */
+.funContainer{
+
+  border: solid black 2px;
+  background-color: white;
+  max-width:800px;
+  height:160px;
+  margin-top:50px;
+  margin-left:50px;
+  padding-top:20px;
+  padding-left:20px;
+  padding-right:20px;
+
+}
+
+
 /* here I add a responsive navbar for small screens (flex->to->block) */
 @media (max-width: 768px) {
 
@@ -494,6 +548,14 @@ button:focus-visible {
         /* padding-bottom:100px; */
         /* width: 100%;
         height: 40vh; */
+      }
+
+      /* styling about section on small devices */
+      .stylingAbout{
+        display:block;
+      }
+      .stylingQuickAccess{
+        display:block;
       }
 
   }
