--- a/src/index.css
+++ b/src/index.css
@@ -232,6 +232,8 @@ a{
     display:flex;
     align-items: center;
     justify-content: center;
+    margin-left:5%;
+    margin-right:5%;
     /* width: 100%;
     height: 40vh; */
   }
@@ -461,11 +463,17 @@ button:focus-visible {
   margin-top:30px;
   margin-bottom:30px;
   /* max-width:120%; */
-  padding-right:100px;
+  padding:10%;
+  margin-right:100px;
   text-align: center;
   justify-content: center;
   align-items:center ;
   font-family: Calibri, sans-serif;
+
+
+    border: solid black 2px;
+  background-color: white;
+
 }
 
 
@@ -475,12 +483,9 @@ button:focus-visible {
   border: solid black 2px;
   background-color: white;
   max-width:800px;
-  height:160px;
   margin-top:50px;
   margin-left:50px;
-  padding-top:20px;
-  padding-left:20px;
-  padding-right:20px;
+  padding:5%;
 
 }
 
