--- a/src/index.css
+++ b/src/index.css
@@ -232,8 +232,8 @@ a{
     display:flex;
     align-items: center;
     justify-content: center;
-    margin-left:5%;
-    margin-right:5%;
+    /* margin-left:5%;
+    margin-right:5%; */
     /* width: 100%;
     height: 40vh; */
   }
@@ -547,9 +547,9 @@ button:focus-visible {
         align-items: center;
         justify-content: center;
         margin-bottom:200px;
-        max-width:100%;
-        margin-left:5px;
-        margin-right:5px;
+        max-width:80%;
+        margin-left:10%;
+        margin-right:10%;
         /* padding-bottom:100px; */
         /* width: 100%;
         height: 40vh; */
