--- a/src/index.css
+++ b/src/index.css
@@ -562,16 +562,15 @@ button:focus-visible {
       .stylingQuickAccess{
         display:block;
       }
-
+      /* 
       .card{
         background-color: white;
         border-radius: 5px;
         display: flex;
         justify-content: center;
         align-items: center;
-        max-height:20px;
-        max-width:40px;
-      }
+        max-height:40px;
+      } */
 
   }
 
